# bandcamp-dl

./: pyproject.toml
.github/workflows/: publish-to-test-pypi.yml
bandcamp_dl/: __main__.py  bandcamp.py  bandcampdownloader.py  bandcampjson.py  config.py  const.py  main.py
