[project]
name = "bandcamp-downloader"
authors = [
  { name = "Iheanyi Ekechukwu", email = "iekechukwu@gmail.com" },
  { name = "Anthony Forsberg", email = "forsberganthony@yahoo.com" },
]
version = "0.0.18"
description = "Add your description here"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: End Users/Desktop',
  'Topic :: Multimedia :: Sound/Audio',
  'License :: Public Domain',
  'Programming Language :: Python :: 3.8',
]
dependencies = [
  "beautifulsoup4 >= 4.13.0b2",
  "demjson3 >= 3.0.6",
  "eval-type-backport>=0.3.1",
  "mutagen >= 1.47.0",
  "pydantic>=2.10.6",
  "requests >= 2.32.3",
  "toml>=0.10.2",
  "unicode-slugify>=0.1.5",
  "urllib3 >= 2.2.2",
]

license = { text = "Unlicense" }

[project.scripts]
bandcamp-dl = "bandcamp_dl.main:main"

[build-system]
requires = ["uv_build~=0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "bandcamp_dl"
module-root = ""

[tool.uv.sources]
unicode-slugify = { git = "https://github.com/dnicolson/unicode-slugify.git", rev = "a18826f" }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",    # pycodestyle
  "F",    # Pyflakes
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
  "I",    # isort
  "ISC",  # implicit string concat
  "PT",   # pytest
  "RET",  # return
  "ERA",  # remove commented code
  "PGH",  # use specific error code for lint ignores
  "PL",   # pylint
  "PERF",
  "FURB",
  "A005",
]
ignore = [
  "E501",   # Line too long
  "ISC001",
  "PLR091", # Uncle Bob's BS
  "PTH123", # open should be replaced by Path.open
]

[dependency-groups]
dev = ["ruff>=0.14.14", "ty>=0.0.13"]
